tests/parsing/smtlib/v2.7/errors/069_declare-fun_bad_name_1.smt2
(set-logic ALL)
(declare-fun _)
